<resources>
    <string name="app_name">Don\'t Math In Public</string>
    <string name="action_settings">Settings</string>
    <string name="of_word">of</string>
    <string name="resultViewDefault">0</string>
    <string name="percent">%</string>
    <string name="what_is">What is</string>
    <string name="enter_a_percentage">Enter a percentage</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="calculate">Calculate</string>
</resources>
