<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/staticTextView2"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/of_word"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/numberTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTextView3" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/resultViewDefault"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/staticTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/staticTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="80dp"
        android:text="@string/percent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/staticTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentageTextField"
        app:layout_constraintTop_toBottomOf="@+id/staticTextView1" />

    <TextView
        android:id="@+id/staticTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="@string/what_is"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/staticTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <EditText
        android:id="@+id/percentageTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:ems="10"
        android:hint="@string/enter_a_percentage"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/staticTextView3"
        app:layout_constraintEnd_toStartOf="@+id/staticTextView3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numberTextField"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTextView2" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="193dp"
        android:layout_height="75dp"
        android:layout_marginBottom="103dp"
        android:background="#ae4949"
        android:text="@string/calculate"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTextField" />

</android.support.constraint.ConstraintLayout>